--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -17,7 +17,7 @@
   </div>
   <div class="chat-interface">
     <div class="chat-header">
-      <h2>Chat with {{ selectedUser1?.username }}</h2>
+      <h2>Chat with {{ selectedUser?.username }}</h2>
     </div>
 
     <div class="chat-messages">
