Improve Login Signup UI

--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,4 +1,179 @@
-<h1>Signup Page</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Chat Login</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+  </head>
+  <body>
+    <section class="ftco-section">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-6 text-center mb-5"></div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-7 col-lg-5">
+            <div class="wrap">
+              <div
+                class="img"
+                style="background-image: url(assets/img/g1.gif)"
+              ></div>
+              <div class="login-wrap p-4 p-md-5">
+                <div class="d-flex">
+                  <div class="w-100">
+                    <h3 class="mb-4">Sign Up</h3>
+                  </div>
+                  <div class="w-100">
+                    <p class="social-media d-flex justify-content-end">
+                      <a
+                        href="#"
+                        class="social-icon d-flex align-items-center justify-content-center"
+                      >
+                        <span class="fa fa-facebook"></span
+                      ></a>
+                      <a
+                        href="#"
+                        class="social-icon d-flex align-items-center justify-content-center"
+                      >
+                        <span class="fa fa-twitter"></span
+                      ></a>
+                    </p>
+                  </div>
+                </div>
+                <form
+                  action="#"
+                  class="signin-form"
+                  (ngSubmit)="signup()"
+                  #signupForm="ngForm"
+                >
+                  <div class="form-group mt-3">
+                    <input
+                      type="text"
+                      class="form-control"
+                      [(ngModel)]="user.username"
+                      name="username"
+                      required
+                    />
+                    <label class="form-control-placeholder" for="username"
+                      >Username</label
+                    >
+                  </div>
+                  <div class="form-group mt-3">
+                    <input
+                      type="text"
+                      class="form-control"
+                      [(ngModel)]="user.email"
+                      name="email"
+                      required
+                    />
+                    <label class="form-control-placeholder" for="username"
+                      >Email</label
+                    >
+                  </div>
+                  <div *ngIf="errorMessage" class="error-message">
+                    <p>** {{ errorMessage }}</p>
+                  </div>
+
+                  <div class="form-group">
+                    <input
+                      id="password-field"
+                      type="password"
+                      class="form-control"
+                      [(ngModel)]="user.password"
+                      name="password"
+                      #password="ngModel"
+                      required
+                      minlength="8"
+                    />
+                    <label class="form-control-placeholder" for="password"
+                      >Password</label
+                    >
+                    <span
+                      toggle="#password-field"
+                      class="fa fa-fw fa-eye field-icon toggle-password"
+                    ></span>
+                  </div>
+                  <!-- Display a validation message if password is less than 8 characters -->
+                  <div
+                    *ngIf="
+                      password.invalid && (password.dirty || password.touched)
+                    "
+                  >
+                    <p
+                      *ngIf="password.errors?.['minlength']"
+                      class="error-message"
+                    >
+                      **Password must be at least 8 characters long.
+                    </p>
+                  </div>
+
+                  <div class="form-group">
+                    <select
+                      name="role"
+                      [(ngModel)]="user.role"
+                      required
+                      id="password-field"
+                      type="password"
+                      class="form-control"
+                    >
+                      <option value="admin">Admin</option>
+                      <option value="agent">Agent</option>
+                    </select>
+
+                    <label class="form-control-placeholder" for="password"
+                      >Role</label
+                    >
+                  </div>
+
+                  <div class="form-group">
+                    <button
+                      type="submit"
+                      class="form-control btn btn-primary rounded submit px-3"
+                      [disabled]="signupForm.invalid || password.invalid"
+                    >
+                      Sign In
+                    </button>
+                  </div>
+                  <div class="form-group d-md-flex">
+                    <div class="w-50 text-left">
+                      <label class="checkbox-wrap checkbox-primary mb-0"
+                        >Remember Me
+                        <input type="checkbox" checked />
+                        <span class="checkmark"></span>
+                      </label>
+                    </div>
+                    <div class="w-50 text-md-right">
+                      <a href="#">Forgot Password</a>
+                    </div>
+                  </div>
+                </form>
+                <p class="text-center">
+                  Not a member?
+                  <a data-toggle="tab" href="#">Sign In</a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/popper.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
+  </body>
+</html>
+
+<!-- <h1>Signup Page</h1>
 <div class="formdiv">
   <form (ngSubmit)="signup()" #signupForm="ngForm">
     <input
@@ -31,10 +206,10 @@
       #password="ngModel"
       required
       minlength="8"
-    /><br />
+    /><br /> -->
 
-    <!-- Display a validation message if password is less than 8 characters -->
-    <div *ngIf="password.invalid && (password.dirty || password.touched)">
+<!-- Display a validation message if password is less than 8 characters -->
+<!-- <div *ngIf="password.invalid && (password.dirty || password.touched)">
       <p *ngIf="password.errors?.['minlength']" class="error-message">
         **Password must be at least 8 characters long.
       </p>
@@ -51,5 +226,5 @@
     >
       Save
     </button>
-  </form>
-</div>
+  </form> -->
+<!-- </div> -->
