--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,23 +1,120 @@
-<h1>Login Page</h1>
-<div class="formdiv">
-  <form (ngSubmit)="login()">
-    <input
-      class="text"
-      type="email"
-      placeholder="Enter your email"
-      [(ngModel)]="c1.email"
-      name="email"
-      required
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Chat Login</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap"
+      rel="stylesheet"
     />
-    <input
-      class="text"
-      type="password"
-      placeholder="Enter your password"
-      [(ngModel)]="c1.password"
-      name="password"
-      required
-    /><br />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+  </head>
+  <body>
+    <section class="ftco-section">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-6 text-center mb-5"></div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-7 col-lg-5">
+            <div class="wrap">
+              <div
+                class="img"
+                style="background-image: url(assets/img/g1.gif)"
+              ></div>
+              <div class="login-wrap p-4 p-md-5">
+                <div class="d-flex">
+                  <div class="w-100">
+                    <h3 class="mb-4">Sign In</h3>
+                  </div>
+                  <div class="w-100">
+                    <p class="social-media d-flex justify-content-end">
+                      <a
+                        href="#"
+                        class="social-icon d-flex align-items-center justify-content-center"
+                      >
+                        <span class="fa fa-facebook"></span
+                      ></a>
+                      <a
+                        href="#"
+                        class="social-icon d-flex align-items-center justify-content-center"
+                      >
+                        <span class="fa fa-twitter"></span
+                      ></a>
+                    </p>
+                  </div>
+                </div>
+                <form action="#" class="signin-form" (ngSubmit)="login()">
+                  <div class="form-group mt-3">
+                    <input
+                      type="text"
+                      class="form-control"
+                      [(ngModel)]="c1.email"
+                      name="email"
+                      required
+                    />
+                    <label class="form-control-placeholder" for="username"
+                      >Username</label
+                    >
+                  </div>
+                  <div class="form-group">
+                    <input
+                      id="password-field"
+                      type="password"
+                      class="form-control"
+                      required
+                      [(ngModel)]="c1.password"
+                      name="password"
+                    />
+                    <label class="form-control-placeholder" for="password"
+                      >Password</label
+                    >
+                    <span
+                      toggle="#password-field"
+                      class="fa fa-fw fa-eye field-icon toggle-password"
+                    ></span>
+                  </div>
+                  <div class="form-group">
+                    <button
+                      type="submit"
+                      class="form-control btn btn-primary rounded submit px-3"
+                    >
+                      Sign In
+                    </button>
+                  </div>
+                  <div class="form-group d-md-flex">
+                    <div class="w-50 text-left">
+                      <label class="checkbox-wrap checkbox-primary mb-0"
+                        >Remember Me
+                        <input type="checkbox" checked />
+                        <span class="checkmark"></span>
+                      </label>
+                    </div>
+                    <div class="w-50 text-md-right">
+                      <a href="#">Forgot Password</a>
+                    </div>
+                  </div>
+                </form>
+                <p class="text-center">
+                  Not a member?
+                  <a data-toggle="tab" href="signup/signup.component.ts"
+                    >Sign Up</a
+                  >
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-    <button type="submit" class="btn">Login</button>
-  </form>
-</div>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/popper.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
+  </body>
+</html>
