change the chat Interface

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -1,3 +1,8 @@
+<link
+  href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+  rel="stylesheet"
+/>
+
 <div *ngIf="connected; else notConnected">
   <p>WebSocket is connected and working!</p>
 </div>
@@ -5,7 +10,115 @@
   <p>WebSocket is not connected.</p>
 </ng-template>
 
-<h1>{{ loginUser }}</h1>
+<h3>{{ loginUser }}</h3>
+<div class="container">
+  <div class="row clearfix">
+    <div class="col-lg-12">
+      <div class="card chat-app">
+        <div id="plist" class="people-list">
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fa fa-search"></i></span>
+            </div>
+            <input type="text" class="form-control" placeholder="Search..." />
+          </div>
+          <ul class="list-unstyled chat-list mt-2 mb-0">
+            <li
+              class="clearfix"
+              *ngFor="let user of userlist"
+              (click)="selectUser(user)"
+              [ngClass]="{ 'selected-user': user === selectedUser }"
+            >
+              {{ user.username }}
+            </li>
+          </ul>
+        </div>
+
+        <div class="chat">
+          <div class="chat-header clearfix">
+            <div class="row">
+              <div class="col-lg-6">
+                <a
+                  href="javascript:void(0);"
+                  data-toggle="modal"
+                  data-target="#view_info"
+                >
+                  <img
+                    src="https://bootdey.com/img/Content/avatar/avatar2.png"
+                    alt="avatar"
+                  />
+                </a>
+                <div class="chat-about">
+                  <h6 class="m-b-0">{{ selectedUser?.username }}</h6>
+                </div>
+              </div>
+              <div class="col-lg-6 hidden-sm text-right">
+                <a href="javascript:void(0);" class="btn btn-outline-secondary"
+                  ><i class="fa fa-camera"></i
+                ></a>
+                <a href="javascript:void(0);" class="btn btn-outline-primary"
+                  ><i class="fa fa-image"></i
+                ></a>
+                <a href="javascript:void(0);" class="btn btn-outline-info"
+                  ><i class="fa fa-cogs"></i
+                ></a>
+                <a href="javascript:void(0);" class="btn btn-outline-warning"
+                  ><i class="fa fa-question"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="chat-history">
+            <ul class="m-b-0">
+              <li class="clearfix">
+                <div class="message-data text-right">
+                  <span class="message-data-time">10:10 AM, Today</span>
+                  <img
+                    src="https://bootdey.com/img/Content/avatar/avatar7.png"
+                    alt="avatar"
+                  />
+                </div>
+              </li>
+              <li class="clearfix">
+                <div
+                  class="message-data"
+                  *ngFor="let msg of messages"
+                  class="message my-message"
+                >
+                  <!-- <span class="message-data-time">10:12 AM, Today</span> -->
+                  <span style="margin-left: 1em">{{ msg.username }}</span>
+                  <span style="margin-left: 1em">{{ msg.receiverName }}</span>
+                  <span style="margin-left: 1em">{{ msg.content }}</span>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div class="chat-message clearfix">
+            <div class="input-group mb-0">
+              <div class="input-group-prepend">
+                <span class="input-group-text" (click)="sendMessage()">
+                  <i class="fa fa-send"></i
+                ></span>
+                <!-- <sbutton (click)="sendMessage()">Send</sbutton> -->
+              </div>
+              <input
+                type="text"
+                class="form-control"
+                [(ngModel)]="message"
+                (keyup.enter)="sendMessage()"
+                placeholder="Enter a message...."
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Old Desgin of Chat -->
+
+<!-- <h1>{{ loginUser }}</h1>
 <div class="chat-container">
   <div class="chat-container">
     <div class="user-list">
@@ -20,18 +133,18 @@
         </li>
       </ul>
     </div>
-  </div>
+  </div> -->
 
-  <!-- your-component.component.html -->
+<!-- your-component.component.html -->
 
-  <!-- <div>
+<!-- <div>
     <h2>Messages</h2>
     <ul>
       <li *ngFor="let message of messages">{{ message }}</li>
     </ul>
   </div> -->
 
-  <div class="chat-interface">
+<!-- <div class="chat-interface">
     <div class="chat-header">
       <h2>Chat with {{ selectedUser?.username }}</h2>
     </div>
@@ -53,4 +166,4 @@
       <button (click)="sendMessage()">Send</button>
     </div>
   </div>
-</div>
+</div> -->
