--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -57,7 +57,7 @@ body {
   justify-content: center;
   height: 100vh;
   overflow: hidden;
-  background: #8b0000;
+  background: #fff;
   margin: 0;
   padding: 0;
 }
