--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -10700,7 +10700,7 @@ a {
   -webkit-transition: 0.3s all ease;
   -o-transition: 0.3s all ease;
   transition: 0.3s all ease;
-  color: #8b0000;
+  color: #007bff;
 }
 a:hover,
 a:focus {
@@ -10820,7 +10820,7 @@ h5,
   outline: none !important;
   -webkit-box-shadow: none;
   box-shadow: none;
-  border: 1px solid #8b0000;
+  border: 1px solid #007bff;
 }
 
 .field-icon {
@@ -10852,7 +10852,7 @@ h5,
   text-transform: uppercase;
   font-size: 12px;
   letter-spacing: 1px;
-  color: #8b0000;
+  color: #007bff;
   font-weight: 700;
 }
 
@@ -10875,7 +10875,7 @@ h5,
 }
 .social-media .social-icon:hover,
 .social-media .social-icon:focus {
-  background: #8b0000;
+  background: #007bff;
 }
 .social-media .social-icon:hover span,
 .social-media .social-icon:focus span {
@@ -10942,10 +10942,10 @@ h5,
 
 /* Style the checkmark/indicator */
 .checkbox-primary {
-  color: #8b0000;
+  color: #007bff;
 }
 .checkbox-primary input:checked ~ .checkmark:after {
-  color: #8b0000;
+  color: #007bff;
 }
 
 .btn {
@@ -10961,12 +10961,12 @@ h5,
   outline: none;
 }
 .btn.btn-primary {
-  background: #8b0000 !important;
-  border: 1px solid #8b0000 !important;
+  background: #007bff !important;
+  border: 1px solid #007bff !important;
   color: #fff !important;
 }
 .btn.btn-primary:hover {
-  border: 1px solid #8b0000;
+  border: 1px solid #007bff;
   background: transparent;
   color: #01d28e;
 }
