--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -23,7 +23,7 @@
 }
 
 .chat-header {
-  background-color: #8b0000;
+  background-color: #007bff;
   color: white;
   padding: 10px;
   border-top-left-radius: 8px;
@@ -59,7 +59,7 @@ input {
 }
 
 button {
-  background-color: #8b0000;
+  background-color: #007bff;
   color: white;
   border: none;
   border-radius: 4px;
@@ -68,11 +68,11 @@ button {
 }
 
 button:hover {
-  background-color: #8b0000;
+  background-color: #007bff;
 }
 
 .selected-user {
-  background-color: #8b0000;
+  background-color: #007bff;
   color: #fff;
 }
 
