--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -135,8 +135,8 @@ body {
   width: 40px;
   height: 40px;
   border-radius: 100px;
-  background: #8b0000;
-  box-shadow: 0 5px 15px 0 #8b0000, inset 0px -6px 12px 0px #8b0000;
+  background: #007bff;
+  box-shadow: 0 5px 15px 0 #007bff, inset 0px -6px 12px 0px #007bff;
   transition: all 0.4s ease-in-out;
 }
 
@@ -183,7 +183,7 @@ body {
   width: 100%;
   height: 50px;
   border-radius: 12px;
-  box-shadow: 0 10px 20px 0 #3cb37177, inset 0px -4px 8px 0 SeaGreen;
+  box-shadow: 0 10px 20px 0 #90bdec;
   border: none !important;
   padding: 0px 20px 5px 20px;
 }
@@ -281,7 +281,7 @@ body {
   justify-content: center;
   width: 45px;
   height: 45px;
-  background: #8b0000;
+  background: #007bff;
   border-radius: 10px;
   margin-bottom: 25px;
   box-shadow: 0 7px 14px 0 #fff, inset 0px -5px 7px 0px fff;
@@ -383,7 +383,7 @@ body {
   width: 27%;
   height: 50%;
 
-  /* box-shadow: 0 10px 20px 0 #8b0000, inset 0px -7px 12px 1px MediumSeaGreen; */
+  /* box-shadow: 0 10px 20px 0 #007bff, inset 0px -7px 12px 1px MediumSeaGreen; */
   border-radius: 20px;
   transition: all 0.4s ease-in-out;
 }
@@ -953,53 +953,13 @@ body {
 }
 
 .clay-category:nth-child(2) {
-  background: #8b0000;
+  background: none;
   order: 1;
 }
 
 .clay-category:nth-child(3) {
-  background: #8b0000;
+  background: none;
   order: 3;
-}
-
-.featured-users > div > div:nth-child(2) > div {
-  background: dimgray;
-  width: 50px;
-  height: 50px;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 0 6px 15px 0 #3cb371aa, inset 0px -7px 12px 1px black;
-  margin-right: 10px;
-}
-
-.featured-users > div > div:nth-child(2) > div:hover {
-  cursor: pointer;
-  transform: translateY(-3px);
-  box-shadow: 0 10px 16px 0 #3cb371dd, inset 0px -5px 9px 0px MediumSeaGreen;
-  border: 1px solid MediumSpringGreen;
-}
-
-.featured-users > div > div:nth-child(2) > div:active {
-  transform: scale(0.92);
-}
-
-.featured-users > div > div:nth-child(2) > div > svg {
-  fill: white;
-  width: 70%;
-  height: auto;
-}
-
-.featured-users > div > div:nth-child(2) > div:nth-child(2) > svg {
-  width: 40%;
-  height: auto;
-}
-
-.featured-users > div > div:nth-child(2) > div:nth-child(3) > svg {
-  width: 55%;
-  height: auto;
 }
 
 @media (max-width: 1870px) {
@@ -1052,7 +1012,7 @@ body {
     top: 0px;
     padding: 20px 0px;
     /* box-shadow: 0 10px 20px 0 #2e8b57aa, inset 0px -7px 9px 0px SeaGreen; */
-    border: 1px solid #8b0000;
+    border: 1px solid #007bff;
   }
   .left-sidebar > div,
   .left-sidebar > div:last-of-type {
