--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,6 +8,12 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
     <title>Document</title>
   </head>
   <body>
@@ -229,6 +235,9 @@
                     <h2>Email: {{ email }}</h2>
                     <h2>Role: {{ role }}</h2>
                     <h2>Username: {{ username }}</h2>
+                    <button class="btn btn-success" (click)="logout()">
+                      Logout
+                    </button>
                   </div>
 
                   <div class="clay-category">
