--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -24,7 +24,7 @@
             <div class="wrap">
               <div
                 class="img"
-                style="background-image: url(assets/img/g1.gif)"
+                style="background-image: url(assets/img/12.jpg)"
               ></div>
               <div class="login-wrap p-4 p-md-5">
                 <div class="d-flex">
@@ -55,10 +55,11 @@
                       class="form-control"
                       [(ngModel)]="c1.email"
                       name="email"
+                      autocomplete="off"
                       required
                     />
                     <label class="form-control-placeholder" for="username"
-                      >Username</label
+                      >Email</label
                     >
                   </div>
                   <div class="form-group">
@@ -101,9 +102,7 @@
                 </form>
                 <p class="text-center">
                   Not a member?
-                  <a data-toggle="tab" href="signup/signup.component.ts"
-                    >Sign Up</a
-                  >
+                  <a routerLink="/signup" class="links">Singup</a>
                 </p>
               </div>
             </div>
