--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -10,6 +10,12 @@
     />
     <link
       rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
   </head>
@@ -24,7 +30,7 @@
             <div class="wrap">
               <div
                 class="img"
-                style="background-image: url(assets/img/g1.gif)"
+                style="background-image: url(assets/img/12.jpg)"
               ></div>
               <div class="login-wrap p-4 p-md-5">
                 <div class="d-flex">
@@ -53,6 +59,7 @@
                   class="signin-form"
                   (ngSubmit)="signup()"
                   #signupForm="ngForm"
+                  autocomplete="off"
                 >
                   <div class="form-group mt-3">
                     <input
@@ -61,6 +68,7 @@
                       [(ngModel)]="user.username"
                       name="username"
                       required
+                      autocomplete="off"
                     />
                     <label class="form-control-placeholder" for="username"
                       >Username</label
@@ -72,6 +80,7 @@
                       class="form-control"
                       [(ngModel)]="user.email"
                       name="email"
+                      autocomplete="off"
                       required
                     />
                     <label class="form-control-placeholder" for="username"
@@ -157,7 +166,7 @@
                 </form>
                 <p class="text-center">
                   Not a member?
-                  <a data-toggle="tab" href="#">Sign In</a>
+                  <a routerLink="/login" class="links">Signin</a>
                 </p>
               </div>
             </div>
