add user status

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -30,7 +30,8 @@
               <div class="about">
                 <div class="name">{{ user.username }}</div>
                 <div class="status">
-                  <i class="fa fa-circle offline"></i> left 7 mins ago
+                  <span>Online</span>
+                  <!-- <i class="fa fa-circle offline"></i> left 7 mins ago -->
                 </div>
               </div>
             </li>
